\emph replaced with \ul

--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -27,13 +27,13 @@
 
 \plush{\sqmTitlePage{1}{q9Gr2xguP5I}}
 
-\thought{Everybody wants higher \emph{quality of code}, but nobody knows how to measure it.}
+\thought{Everybody wants higher \ul{quality of code}, but nobody knows how to measure it.}
 
-\thought{Code \emph{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
+\thought{Code \ul{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
 
-\thought{Code \emph{size} makes the biggest negative impact on code maintainability.}
+\thought{Code \ul{size} makes the biggest negative impact on code maintainability.}
 
-\thought{It \emph{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
+\thought{It \ul{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
 
 \thought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
 
