--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -42,9 +42,9 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 
 \thought{What is a complexity of a class? How about a module?}
 
-\thought{\emph{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
+\thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
 
-\thought{Tom McCabe suggested to prohibit functions where CC is larger than \emph{ten}. Modern static analyzers may help you control this automatically.}
+\thought{Tom McCabe suggested to prohibit functions where CC is larger than \ul{ten}. Modern static analyzers may help you control this automatically.}
 
 \plush{
   \pptBanner{Read this:}\par
