--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -59,7 +59,7 @@ scores, ones that are far more reflective of their relative understandability.''
 
 \thought{``Perceived complexity'' is human's impression and conceptualization of a system as being complex.}
 
-\pitch{\pptBanner{Social Code Analysis}``\emph{Social code analysis} enriches our understanding of the code quality by overlaying a \emph{developer's behavior} with the \emph{structural analysis} of the code'' --- \href{https://www.thoughtworks.com/en-de/radar/techniques/social-code-analysis}{Technology Radar} of ThoughtWorks, March 2017}
+\pitch{\pptBanner{Social Code Analysis}``\ul{Social code analysis} enriches our understanding of the code quality by overlaying a \ul{developer's behavior} with the \ul{structural analysis} of the code'' --- \href{https://www.thoughtworks.com/en-de/radar/techniques/social-code-analysis}{Technology Radar} of ThoughtWorks, March 2017}
 
 \pitch{\pptQuote{helmet.jpg}{BrainMaster Technologies (USA) sells this ``\href{https://brainmaster.com/product/freedom-20r-series/}{Freedom 20R}'' EEG head set for \$31,025. A similar device you can get from \href{https://neiry.ru/about-us}{Neiry} (Russia), for 3\% of this price.}{}}
 
