--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -27,13 +27,13 @@
 
 \plush{\sqmTitlePage{4}{YsGzjv0hgcc}}
 
-\pitch{\pptQuote{maurice-halstead.jpg}{Any attempt to find a \emph{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \emph{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}{Maurice H. Halstead, \newline \textit{Elements of Software Science}, 1977}}
+\pitch{\pptQuote{maurice-halstead.jpg}{Any attempt to find a \ul{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \ul{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}{Maurice H. Halstead, \newline \textit{Elements of Software Science}, 1977}}
 
 \plush{
 \pptBanner{Inputs}
 \begin{itemize}
-\item \(\eta_1\) --- the number of distinct \emph{operators}
-\item \(\eta_2\) --- the number of distinct \emph{operands}
+\item \(\eta_1\) --- the number of distinct \ul{operators}
+\item \(\eta_2\) --- the number of distinct \ul{operands}
 \item \(N_{1}\) --- the total number of operators
 \item \(N_{2}\) --- the total number of operands
 \end{itemize}
@@ -46,7 +46,7 @@
 
 \pitch{
 \pptBanner{Operators and Operands}
-``When a program is translated from one language to another, as from FORTRAN to machine language for example, the actual operators and operands may indeed change, but both versions must still consist of combinations of operators and operands. \emph{No other category} of entities need be present.'' --- \textit{Advances in Software Science}, Maurice Halstead, Advances in Computers, Volume 18, 1979
+``When a program is translated from one language to another, as from FORTRAN to machine language for example, the actual operators and operands may indeed change, but both versions must still consist of combinations of operators and operands. \ul{No other category} of entities need be present.'' --- \textit{Advances in Software Science}, Maurice Halstead, Advances in Computers, Volume 18, 1979
 }
 
 \pitch{
