--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -60,7 +60,7 @@ void main(Shape s)
 \end{pptWide}
 \plush{}
 
-\pitch{\pptBanner{CAMC}\pptQuote{jagdish-bansiya.jpg}{Cohesion Among Methods of Classes (CAMC) evaluates the relatedness of methods in the interface of a class using the parameter lists defined for the methods. It can be applied earlier in the development than can traditional cohesiveness metrics because it relies only on method prototypes declared in a class.}{\textit{A Class Cohesion Metric for Object-Oriented Designs}, \emph{Jagdish Bansiya}, Letha Etzkorn, Carl Davis and Wei Li, Journal of Object-Oriented Programming, vol.~11, no.~8, 1999}}
+\pitch{\pptBanner{CAMC}\pptQuote{jagdish-bansiya.jpg}{Cohesion Among Methods of Classes (CAMC) evaluates the relatedness of methods in the interface of a class using the parameter lists defined for the methods. It can be applied earlier in the development than can traditional cohesiveness metrics because it relies only on method prototypes declared in a class.}{\textit{A Class Cohesion Metric for Object-Oriented Designs}, \ul{Jagdish Bansiya}, Letha Etzkorn, Carl Davis and Wei Li, Journal of Object-Oriented Programming, vol.~11, no.~8, 1999}}
 
 \plush{\begin{pptWide}{2}
 \includegraphics[width=\columnwidth]{nhd-1.png}\par
@@ -71,7 +71,7 @@ void main(Shape s)
 \includegraphics[width=.9\columnwidth]{nhd-2.png}\par
 \end{pptWide}}
 
-\pitch{\pptBanner{NHD}\pptQuote{steve-counsell.jpg}{The hamming distance (HD) provides a measure of disagreement between rows in a binary matrix. The Normalised Hamming Distance (NHD) metric measures agreement between rows in a binary matrix.}{\textit{The Interpretation and utility of three cohesion metrics for object-oriented design}, \emph{Steve Counsell}, Stephen Swift, Jason Crampton, ACM Transactions on Software Engineering and Methodology (TOSEM), vol.~15, no.~2, 2006}}
+\pitch{\pptBanner{NHD}\pptQuote{steve-counsell.jpg}{The hamming distance (HD) provides a measure of disagreement between rows in a binary matrix. The Normalised Hamming Distance (NHD) metric measures agreement between rows in a binary matrix.}{\textit{The Interpretation and utility of three cohesion metrics for object-oriented design}, \ul{Steve Counsell}, Stephen Swift, Jason Crampton, ACM Transactions on Software Engineering and Methodology (TOSEM), vol.~15, no.~2, 2006}}
 
 \plush{\begin{pptWide}{2}
 \includegraphics[width=\columnwidth]{nhd-1.png}\par
@@ -83,7 +83,7 @@ void main(Shape s)
 \includegraphics[width=.9\columnwidth]{nhd-3.png}\par
 \end{pptWide}}
 
-\pitch{\pptBanner{Interface Segregation Principle}\pptQuote{robert-martin.jpg}{Classes that have 'fat' interfaces are classes whose interfaces are not \emph{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}{\textit{Agile Software Development, Principles, Patterns, and Practices},  Robert C. Martin, 2002}}
+\pitch{\pptBanner{Interface Segregation Principle}\pptQuote{robert-martin.jpg}{Classes that have 'fat' interfaces are classes whose interfaces are not \ul{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}{\textit{Agile Software Development, Principles, Patterns, and Practices},  Robert C. Martin, 2002}}
 
 \pptBanner{InputStream in Java}
 \begin{pptWide}{2}
