--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -40,7 +40,7 @@
   \item Git: 2005
 \end{itemize}}
 
-\pitch{\pptQuote{sebastian-elbaum.jpg}{We can measure the increase or decrease in system complexity as measured by a selected metric, \emph{code delta}, or we can measure the total amount of \emph{change} the system has undergone between builds, \emph{code churn}.}{\textit{Code Churn: A Measure for Estimating the Impact of Code Change}, \emph{Sebastian G. Elbaum} and John C. Munson, Proceedings of the International Conference on Software Maintenance (ICSM), 1998}}
+\pitch{\pptQuote{sebastian-elbaum.jpg}{We can measure the increase or decrease in system complexity as measured by a selected metric, \ul{code delta}, or we can measure the total amount of \ul{change} the system has undergone between builds, \ul{code churn}.}{\textit{Code Churn: A Measure for Estimating the Impact of Code Change}, \ul{Sebastian G. Elbaum} and John C. Munson, Proceedings of the International Conference on Software Maintenance (ICSM), 1998}}
 
 \pptBanner{Motivating Example}
 \begin{pptWide}{3}
@@ -98,18 +98,18 @@ delta for the system will be close to zero.''
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{nachiappan-nagappan.jpg}{Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \emph{defect density}.}{\textit{Use of Relative Code Churn Measures to Predict System Defect Density}, \emph{Nachiappan Nagappan} and Thomas Ball, Proceedings of the International Conference on Software Engineering (ICSE), 2005}}
+\pitch{\pptQuote{nachiappan-nagappan.jpg}{Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}{\textit{Use of Relative Code Churn Measures to Predict System Defect Density}, \ul{Nachiappan Nagappan} and Thomas Ball, Proceedings of the International Conference on Software Engineering (ICSE), 2005}}
 
-\pitch{\pptQuote{rudolf-ferenc.jpg}{We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}{\textit{Cumulative Code Churn: Impact on Maintainability}, Csaba Farag{\'o}, P{\'e}ter Heged{\H{u}}s, \emph{Rudolf Ferenc}, Proceedings of the International Working Conference on Source Code Analysis and Manipulation (SCAM), 2015}}
+\pitch{\pptQuote{rudolf-ferenc.jpg}{We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}{\textit{Cumulative Code Churn: Impact on Maintainability}, Csaba Farag{\'o}, P{\'e}ter Heged{\H{u}}s, \ul{Rudolf Ferenc}, Proceedings of the International Working Conference on Source Code Analysis and Manipulation (SCAM), 2015}}
 
-\pitch{\pptQuote{tobias-olsson.jpg}{Non-normal code churn can be a tangible and measurable \emph{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \emph{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}{\textit{The Relationship of Code Churn and Architectural Violations in
+\pitch{\pptQuote{tobias-olsson.jpg}{Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}{\textit{The Relationship of Code Churn and Architectural Violations in
 the Open Source Software JabRef}, Tobias Olsson, Morgan Ericsson, Anna Wingkvist, Proceedings of the 11th European Conference on Software Architecture: Companion Proceedings, 2017}}
 
 \pitch{\pptBanner{CodeClimate.com Interpretation of Code Churn}
 \begin{multicols}{2}
 \includegraphics[width=.98\columnwidth]{codeclimate.png}
 \par\columnbreak\par
-``When we have finished analyzing your default branch, you will see churn metrics for the files in your repository. This churn metric is approximately the \emph{number of times a file has changed} in the last 90 days, calculated by counting the number of distinct versions of that file across commits from that time.''\par
+``When we have finished analyzing your default branch, you will see churn metrics for the files in your repository. This churn metric is approximately the \ul{number of times a file has changed} in the last 90 days, calculated by counting the number of distinct versions of that file across commits from that time.''\par
 {\scriptsize Source: \href{https://docs.codeclimate.com/docs/churn}{their blog}\par}
 \end{multicols}}
 
