--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -27,13 +27,13 @@
 
 \plush{\sqmTitlePage{5}{xnSnPfVkmkM}}
 
-\pitch{\pptQuote{fred-brooks.jpg}{The total \emph{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
+\pitch{\pptQuote{fred-brooks.jpg}{The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
 
-\pitch{\pptQuote{ward-cunningham.jpg}{Shipping first time code is like going into \emph{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
+\pitch{\pptQuote{ward-cunningham.jpg}{Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
 
-\pitch{\pptQuote{anonymous-2.png}{Before developers can claim that they are building maintainable systems, there must be some way to \emph{measure} maintainability}{Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \emph{Paul Oman} (University of Idaho), \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
+\pitch{\pptQuote{anonymous-2.png}{Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}{Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \ul{Paul Oman} (University of Idaho), \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
 
-\pitch{\pptQuote{paper-1.png}{The factors of software that determine or influence maintainability can be organized into a \emph{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}{Paul Oman and Jack Hagemeister, \newline \textit{Metrics for Assessing a Software System's Maintainability}, International Conference on Software Maintenance (ICSM), 1992}}
+\pitch{\pptQuote{paper-1.png}{The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}{Paul Oman and Jack Hagemeister, \newline \textit{Metrics for Assessing a Software System's Maintainability}, International Conference on Software Maintenance (ICSM), 1992}}
 
 \plush{
 \pptBanner{Software Maintainability Taxonomy}
@@ -85,15 +85,15 @@
 \end{multicols}
 }
 
-\pitch{\pptQuote{rainer-niedermayr.jpg}{We are convinced that Maintainability Index is \emph{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}{Rainer Niedermayr, \textit{Why we don’t use the Software Maintainability Index}, 2016, \href{https://www.cqse.eu/de/news/blog/maintainability-index/}{link}}}
+\pitch{\pptQuote{rainer-niedermayr.jpg}{We are convinced that Maintainability Index is \ul{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}{Rainer Niedermayr, \textit{Why we don’t use the Software Maintainability Index}, 2016, \href{https://www.cqse.eu/de/news/blog/maintainability-index/}{link}}}
 
 \plush{\pptThought{``The Maintainability Index does not provide information about the impact on development activities. A value of 57 does not express which maintainability aspects are affected by a bad value.'' --- Rainer Niedermayr}}
 
-\pitch{\pptQuote{arie-van-deursen.jpg}{If you are a researcher, \emph{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}{Arie van Deursen, \textit{Think Twice Before Using the ``Maintainability Index''}, 2014, \href{https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/}{link}}}
+\pitch{\pptQuote{arie-van-deursen.jpg}{If you are a researcher, \ul{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}{Arie van Deursen, \textit{Think Twice Before Using the ``Maintainability Index''}, 2014, \href{https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/}{link}}}
 
 \plush{\pptThought{``Tool smiths and vendors used the exact same formula and coefficients as the 1994 experiments, without any recalibration.'' --- Arie van Deursen}}
 
-\pitch{\pptQuote{tim-gilboy.jpg}{If we're going to use the Maintainability Index we should use it to measure \emph{relative} maintainability within our project rather than use it as an \emph{absolute} metric.}{Tim Gilboy, \textit{Maintainability Index - What is it and where does it fall short?}, 2022, \href{https://sourcery.ai/blog/maintainability-index/}{link}}}
+\pitch{\pptQuote{tim-gilboy.jpg}{If we're going to use the Maintainability Index we should use it to measure \ul{relative} maintainability within our project rather than use it as an \ul{absolute} metric.}{Tim Gilboy, \textit{Maintainability Index - What is it and where does it fall short?}, 2022, \href{https://sourcery.ai/blog/maintainability-index/}{link}}}
 
 \plush{\pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
 
@@ -109,7 +109,7 @@
 \item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
 \end{itemize}}
 
-\pitch{\pptQuote{slr.png}{The SLR outcome provided us with \emph{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}{\textit{A Tool-Based Perspective on Software Code Maintainability
+\pitch{\pptQuote{slr.png}{The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}{\textit{A Tool-Based Perspective on Software Code Maintainability
 Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Programming, 2020}}
 
 \plush{
