--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -27,9 +27,9 @@
 
 \plush{\sqmTitlePage{8}{JOKxjpAglFU}}
 
-\pitch{\pptQuote{edward-yourdon.jpg}{Module cohesion may be conceptualized as the \emph{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \emph{close approximation} of inherent problem structure.}{\emph{Edward Yourdon} and Larry Constantine, \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}, Prentice Hall, 1979}}
+\pitch{\pptQuote{edward-yourdon.jpg}{Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}{\ul{Edward Yourdon} and Larry Constantine, \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}, Prentice Hall, 1979}}
 
-\pitch{\pptQuote{james-bieman.jpg}{We define two measures of class cohesion based on the \emph{direct} and \emph{indirect} connections of method pairs: TCC and LCC.}{\emph{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
+\pitch{\pptQuote{james-bieman.jpg}{We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}{\ul{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
 
 \pptBanner{Tight and Loose Class Cohesion (TCC+LCC)}
 \begin{multicols}{2}
@@ -62,9 +62,9 @@ Indirectly connected (\(\texttt{NIC}=2\)): \\
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{paper.png}{If a class is designed in \emph{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \emph{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}{\emph{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
+\pitch{\pptQuote{paper.png}{If a class is designed in \ul{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \ul{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}{\ul{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
 
-\pitch{\pptQuote{../06-coupling/steve-mcconnell.jpg}{Cohesion refers to how closely all the routines in a class or all the code in a routine support a \emph{central purpose}---how focused the class is. The ideas of \emph{abstraction} and cohesion are closely related---a class interface that presents a good abstraction usually has strong cohesion.}{Steven McConnell, \textit{Code Complete}, 2004}}
+\pitch{\pptQuote{../06-coupling/steve-mcconnell.jpg}{Cohesion refers to how closely all the routines in a class or all the code in a routine support a \ul{central purpose}---how focused the class is. The ideas of \ul{abstraction} and cohesion are closely related---a class interface that presents a good abstraction usually has strong cohesion.}{Steven McConnell, \textit{Code Complete}, 2004}}
 
 \pptBanner{Abstraction}
 \begin{multicols}{2}
@@ -94,7 +94,7 @@ var file = {
 \begin{multicols}{2}
 \includegraphics[width=.9\columnwidth]{graphs.png}
 \par\columnbreak\par
-``Our results show that the classes that are heavily \emph{reused} via inheritance exhibit \emph{lower cohesion}. We expected to find that the most reused classes would be the most cohesive ones.'' --- James M. Bieman and Byung-Kyoo Kang
+``Our results show that the classes that are heavily \ul{reused} via inheritance exhibit \ul{lower cohesion}. We expected to find that the most reused classes would be the most cohesive ones.'' --- James M. Bieman and Byung-Kyoo Kang
 \end{multicols}
 \plush{}
 
@@ -116,7 +116,7 @@ class Article
 \end{ffcode}
 }
 \par\columnbreak\par
-``The \ff{Article} copies method \ff{print()} and attribute body from the \ff{Manuscript}, as if it’s not a living organism, but rather a dead one from which we \emph{inherit} its parts.''\par
+``The \ff{Article} copies method \ff{print()} and attribute body from the \ff{Manuscript}, as if it’s not a living organism, but rather a dead one from which we \ul{inherit} its parts.''\par
 ``Implementation inheritance was created as a mechanism for code reuse. It doesn't fit into OOP at all.''\par
 {\scriptsize Source: \href{https://www.yegor256.com/2016/09/13/inheritance-is-procedural.html}{Inheritance Is a Procedural Technique for Code Reuse (2016)}\par}
 \end{multicols}
