--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -29,11 +29,11 @@
 
 \plush{\sqmTitlePage{11}{ynPTEzDTutc}}
 
-\pitch{\pptQuote{../09-CAMC-and-NHD/robert-martin.jpg}{Duplication is the \emph{primary enemy} of a well-designed system.}{\textit{Clean Code: A Handbook of Agile Software Craftsmanship}, Robert C. Martin, Pearson, 2008}}
+\pitch{\pptQuote{../09-CAMC-and-NHD/robert-martin.jpg}{Duplication is the \ul{primary enemy} of a well-designed system.}{\textit{Clean Code: A Handbook of Agile Software Craftsmanship}, Robert C. Martin, Pearson, 2008}}
 
-\pitch{\pptQuote{qurat-ul-ain.jpg}{If a bug is identified in one segment of code, all the similar segments need to be \emph{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}{\textit{A Systematic Review on Code Clone Detection}, \emph{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+\pitch{\pptQuote{qurat-ul-ain.jpg}{If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}{\textit{A Systematic Review on Code Clone Detection}, \ul{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
 
-\pitch{\pptQuote{rainer-koschke.jpg}{The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \emph{multiple times}, too. Yet, it is usually not documented \emph{where} code was copied.}{\textit{Comparison and Evaluation of Clone Detection Tools}, Stefan Bellon, \emph{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo, IEEE Transactions on Software Engineering, 2007}}
+\pitch{\pptQuote{rainer-koschke.jpg}{The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \ul{multiple times}, too. Yet, it is usually not documented \ul{where} code was copied.}{\textit{Comparison and Evaluation of Clone Detection Tools}, Stefan Bellon, \ul{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo, IEEE Transactions on Software Engineering, 2007}}
 
 \pptBanner{Motivating Example (part I)}
 \begin{multicols}{2}
@@ -91,14 +91,14 @@ void sayHello(int id) {
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{brenda-baker.jpg}{Two lines of code are considered to be identical if they contain the same \emph{sequence of characters} after removing comments and white space; the \emph{semantics} of the program statements are not analyzed.}{\textit{A Program for Identifying Duplicated Code}, Brenda S. Baker, Computing Science and Statistics, 1993}}
+\pitch{\pptQuote{brenda-baker.jpg}{Two lines of code are considered to be identical if they contain the same \ul{sequence of characters} after removing comments and white space; the \ul{semantics} of the program statements are not analyzed.}{\textit{A Program for Identifying Duplicated Code}, Brenda S. Baker, Computing Science and Statistics, 1993}}
 
 \pptBanner{Up to 38\% of lines are involved in duplicates}
 \begin{multicols}{2}
 \includegraphics[width=.9\columnwidth]{scatter.png}
 \par\columnbreak\par
 The plots are dense near the main diagonal, implying
-that most copies tend to occur \emph{fairly locally}, e.g. within the
+that most copies tend to occur \ul{fairly locally}, e.g. within the
 same file or module. \par However, certain line segments occur
 away from the main diagonal; it would be interesting to
 investigate why the corresponding sections of code are
@@ -106,13 +106,13 @@ duplicated.
 \end{multicols}
 \plush{}
 
-\pitch{\pptBanner{Don't Repeat Yourself (DRY)}\pptQuote{andy-hunt.jpg}{Every piece of knowledge must have a \emph{single}, unambiguous, authoritative representation within a system.}{\textit{The Pragmatic Programmer: From Journeyman to Master}, \emph{Andrew Hunt} and David Thomas, Addison-Wesley, 1999}}
+\pitch{\pptBanner{Don't Repeat Yourself (DRY)}\pptQuote{andy-hunt.jpg}{Every piece of knowledge must have a \ul{single}, unambiguous, authoritative representation within a system.}{\textit{The Pragmatic Programmer: From Journeyman to Master}, \ul{Andrew Hunt} and David Thomas, Addison-Wesley, 1999}}
 
-\pitch{\pptBanner{The Rule of Three}\pptQuote{kent-beck.jpg}{The \emph{first} time you do something, you just do it. The \emph{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \emph{third} time you do something similar, you refactor.}{\textit{Refactoring}, Martin Fowler and \emph{Kent Beck}, Addison-Wesley, 1999}}
+\pitch{\pptBanner{The Rule of Three}\pptQuote{kent-beck.jpg}{The \ul{first} time you do something, you just do it. The \ul{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \ul{third} time you do something similar, you refactor.}{\textit{Refactoring}, Martin Fowler and \ul{Kent Beck}, Addison-Wesley, 1999}}
 
-\pitch{\pptBanner{Clone Coverage}\pptQuote{yoshiki-higo.jpg}{Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}{\textit{Analysis of the linux kernel evolution using code clone coverage}, Simone Livieri, \emph{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue, International Workshop on Mining Software Repositories (MSR), 2007}}
+\pitch{\pptBanner{Clone Coverage}\pptQuote{yoshiki-higo.jpg}{Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}{\textit{Analysis of the linux kernel evolution using code clone coverage}, Simone Livieri, \ul{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue, International Workshop on Mining Software Repositories (MSR), 2007}}
 
-\pitch{\pptQuote{wasi-haider-butt.jpg}{We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}{\textit{A Systematic Review on Code Clone Detection}, Ain, Qurat Ul, \emph{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+\pitch{\pptQuote{wasi-haider-butt.jpg}{We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}{\textit{A Systematic Review on Code Clone Detection}, Ain, Qurat Ul, \ul{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
 
 \pptBanner{Type-1: Exact Clone}
 \begin{multicols}{2}
@@ -208,7 +208,7 @@ More than one code segments that are functionally similar but implemented by dif
   \end{enumerate}
 }
 
-\pitch{\pptQuote{jens-krinke.jpg}{For the three Java systems studied, the following results were found: 1)~cloned code is usually \emph{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \emph{more stable} than non-cloned code.}{\textit{Is cloned code older than non-cloned code?}, Jens Krinke, Proceedings of the International Workshop on Software Clones, 2011}}
+\pitch{\pptQuote{jens-krinke.jpg}{For the three Java systems studied, the following results were found: 1)~cloned code is usually \ul{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \ul{more stable} than non-cloned code.}{\textit{Is cloned code older than non-cloned code?}, Jens Krinke, Proceedings of the International Workshop on Software Clones, 2011}}
 
 \plush{
   \pptBanner{These tools can help detecting duplicate code:}
