--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -27,7 +27,7 @@
 
 \plush{\sqmTitlePage{14}{pvZDcytPU3w}}
 
-\pitch{\pptQuote{../05-maintainability-index/ward-cunningham.jpg}{Shipping first time code is like going into \emph{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \emph{interest} on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
+\pitch{\pptQuote{../05-maintainability-index/ward-cunningham.jpg}{Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
 
 \pptBanner{Puzzle Driven Development: Motivating Example}
 \begin{pptWide}{3}
@@ -123,7 +123,7 @@ assert fibonacci(10) == 55;
 {\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
 
 \pitch{\pptQuote{giancarlo-succi.jpg}{This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
-for task prioritization within a backlog.}{Yegor Bugayenko, Mirko Farina, Artem Kruglov, Witold Pedrycz, Yaroslav Plaksin, \emph{Giancarlo Succi}, \textit{Automatically Prioritizing Tasks in Software Development}, IEEE Access, Vol.~11, 2023}}
+for task prioritization within a backlog.}{Yegor Bugayenko, Mirko Farina, Artem Kruglov, Witold Pedrycz, Yaroslav Plaksin, \ul{Giancarlo Succi}, \textit{Automatically Prioritizing Tasks in Software Development}, IEEE Access, Vol.~11, 2023}}
 
 \plush{
   \pptBanner{Read this:}\par
